--- a/src/assets/css/forms.css
+++ b/src/assets/css/forms.css
@@ -9,9 +9,9 @@
 }
 
 .input-btn {
-    border: 2px solid black;
+    border: 2px solid #ececec;
     border-radius: 6px;
-    background-color: white;
+    background-color: #eee;
     font-size: 20px;
     margin: 5px;
     padding: 15px;
