--- a/src/assets/css/darkmode.css
+++ b/src/assets/css/darkmode.css
@@ -2,8 +2,16 @@
   color: #e8e6e3 !important;
 }
 
+@media screen and (max-width: 1024px) {
+  .darkmode .SideMenu {
+    border-top:1px solid #363636;
+    background-color: #1a1c1d !important;
+  }
+
+}
+
 .darkmode .SideMenuItem:hover {
-    background-color: #1f2024 !important;;
+  background-color: #1f2024 !important;
 }
 
 .darkmode .SideMenuItem {
@@ -72,4 +80,8 @@
 .darkmode .input-btn {
   background-color: rgb(46, 46, 46) !important;
   border-color: transparent !important;
+}
+
+.darkmode #media-description {
+  background-color: #1f2024;
 }
