--- a/src/assets/css/darkmode.css
+++ b/src/assets/css/darkmode.css
@@ -45,7 +45,7 @@
   background-image: linear-gradient(-128deg, #400131 0%, #2c2e31 100%) !important;
 }
 
-.darkmode .CreationItem__name,.darkmode .CreationItem__details {
+.darkmode .CreationItem__name,.darkmode .Creation__details {
   color: #e8e6e3 !important;
 }
 
@@ -62,8 +62,16 @@
   border-color: #2e2f30 !important;
 }
 
+.darkmode a {
+  color: rgb(121, 121, 121) !important;
+}
+
+.darkmode .drop-item {
+  color: white !important;
+}
+
 .darkmode a:hover,.darkmode  .vue-switcher span:hover,.darkmode  a:hover p{
-  color: rgba(255, 255, 255, 0.712) !important;
+  color: rgb(88, 88, 88) !important;
 }
 
 .darkmode .input-text,.darkmode  .checkmark {
@@ -82,7 +90,7 @@
   border-color: transparent !important;
 }
 
-.darkmode #media-description {
+.darkmode #creation__card {
   background-color: #1f2024;
 }
 
@@ -91,6 +99,10 @@
   color: #e8e6e3;
 }
 
-.darkmode .tags:hover {
+.darkmode .tags:hover, .darkmode .tags:focus  {
   background-color: #2e2e2e;
+}
+
+.darkmode .creation__cover {
+  background-image: linear-gradient(-128deg, #400131 0%, #2c2e31 100%) !important;
 }
